fixed wrong font maybe?

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,8 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: unset;
+
   color: var(--white);
 
   font-style: normal;
